Viết Api getAllUser

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -4,8 +4,12 @@
     "password": null,
     "database": "dinhpham",
     "host": "127.0.0.1",
-    "dialect": "mysql", 
-    "logging": false
+    "dialect": "mysql",
+    "logging": false,
+    "query": {
+      "raw": true
+    },
+    "timezone": "+07:00"
   },
   "test": {
     "username": "root",
@@ -22,4 +26,3 @@
     "dialect": "mysql"
   }
 }
-
